--- a/app.css
+++ b/app.css
@@ -3,15 +3,18 @@
 	font-size: 62.5%;
 }
 
-*{
+* {
 	box-sizing: border-box;
-	font-family: Montserrat, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	margin: 0;
 	padding: 0;
 	color: #333;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
 	margin-bottom: 1rem;
 }
 
@@ -36,6 +39,8 @@ h3 {
 	font-size: 2.8rem;
 	font-weight: 500;
 }
+
+/* UTILITIES */
 
 .container {
 	width: 100vw;
@@ -74,6 +79,7 @@ h3 {
 	display: none;
 }
 
+/* BUTTONS */
 .btn {
 	font-size: 1.8rem;
 	padding: 1rem 0;
@@ -84,14 +90,13 @@ h3 {
 	text-decoration: none;
 	color: #56a5eb;
 	background-color: white;
-	transition: 0.5s;
 }
 
 .btn:hover {
 	cursor: pointer;
 	box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
 	transform: translateY(-0.1rem);
-	transition: 0.5s;
+	transition: transform 150ms;
 }
 
 .btn[disabled]:hover {
@@ -100,6 +105,7 @@ h3 {
 	transform: none;
 }
 
+/* FORMS */
 form {
 	width: 100%;
 	display: flex;
