--- a/game.css
+++ b/game.css
@@ -5,14 +5,13 @@
 	font-size: 1.8rem;
 	border: 0.1rem solid rgb(86, 165, 235, 0.25);
 	background-color: white;
-	transition: 0.5s;
 }
 
 .choice-container:hover {
 	cursor: pointer;
 	box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
 	transform: translateY(-0.1rem);
-	transition: 0.5s;
+	transition: transform 150ms;
 }
 
 .choice-prefix {
@@ -33,6 +32,8 @@
 .incorrect {
 	background-color: #dc3545;
 }
+
+/* HUD */
 
 #hud {
 	display: flex;
@@ -59,4 +60,23 @@
 	height: 3.4rem;
 	background-color: #56a5eb;
 	width: 0%;
+}
+
+/* LOADER */
+#loader {
+	border: 1.6rem solid white;
+	border-radius: 50%;
+	border-top: 1.6rem solid #56a5eb;
+	width: 12rem;
+	height: 12rem;
+	animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
